[gd_scene load_steps=9 format=3 uid="uid://bjn07hupxme7t"]

[ext_resource type="Script" path="res://src/game/scp/173/173.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c4gjq5s8j5io7" path="res://textures/scp/scp-173.png" id="2"]
[ext_resource type="Script" path="res://src/game/hud/debug_showhide.gd" id="3"]
[ext_resource type="Script" path="res://src/game/scp/raycast.gd" id="4"]
[ext_resource type="Script" path="res://src/game/scp/kill.gd" id="5"]

[sub_resource type="CircleShape2D" id="1"]
radius = 13.0

[sub_resource type="CircleShape2D" id="2"]
radius = 400.0

[sub_resource type="CircleShape2D" id="3"]
radius = 16.0

[node name="SCP-173" type="CharacterBody2D" groups=["Save"]]
script = ExtResource("1")

[node name="SCPModel" type="Sprite2D" parent="."]
position = Vector2(1, 0)
rotation = 1.5708
texture = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="DebugPathfinding" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color(1, 0.984314, 0, 1)
script = ExtResource("3")

[node name="RayCastTarget" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
script = ExtResource("4")

[node name="RayCastArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCastArea"]
shape = SubResource("2")

[node name="KillArea" type="Area2D" parent="."]
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("3")

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]
max_distance = 350.0
bus = &"Sound"

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="RayCastArea" to="RayCastTarget" method="_on_RayCastArea_body_entered"]
[connection signal="body_exited" from="RayCastArea" to="RayCastTarget" method="_on_RayCastArea_body_exited"]
[connection signal="body_entered" from="KillArea" to="KillArea" method="_on_KillArea_body_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
